# zisui

./: .gitignore  CLAUDE.md  LICENSE  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
src/book_organizer/: __init__.py  main.py
tests/: test_book_organizer.py  test_numbered_variants.py
