[project]
name = "book-organizer"
version = "0.1.0"
description = "本のスキャンファイルを適切な形式（表紙、001、002...）に自動整理するツール"
readme = "README.md"
authors = [
    {name = "Book Organizer", email = "noreply@example.com"}
]
requires-python = ">=3.8"
dependencies = []
keywords = ["book", "organize", "file", "rename", "scan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.scripts]
book-organizer = "book_organizer.main:main"

[project.urls]
Homepage = "https://github.com/user/book-organizer"
Repository = "https://github.com/user/book-organizer"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["pytest", "pytest-cov", "black", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
